Adding information to all the html files and attaching all images to the images folder

--- a/links/books.html
+++ b/links/books.html
@@ -1,18 +1,20 @@
+<a href="../index.html">Return to main page</a>
 <div>
     <h2>These are my favorite books:</h2>
+    <h3>Click on each book to display more information</h3>
     <ul>
+        
         <li>
-            <a href=""> </a>
-            <img src="">
+            <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone">Harry Potter and the Philosopher's Stone</a>
+            <img src="../images/Harry_Potter_and_the_Philosopher's_Stone_Book_Cover.jpg" alt="Harry Potter and the Philosopher's Stone Book Cover Image">
         </li>
         <li>
-            <a href=""> </a>
-            <img src="">
+            <a href="https://en.wikipedia.org/wiki/Hush,_Hush">Hush, Hush</a>
+            <img src="../images/HushHush.jpg" alt="Hush, Hush Book Cover Image">
         </li>
         <li>
-            <a href=""> </a>
-            <img src="">
+            <a href="https://en.wikipedia.org/wiki/Crescendo_(Fitzpatrick_novel)">Crescendo</a>
+            <img src="../images/Crescendo.jpg" alt="Crescendo Book Cover Image">
         </li>
     </ul>
-    <a href="../index.html">Return to main page</a>
 </div>
