Updating index.html file

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <a href="././links/books.html">Favorite Books</a>
                 </li>
                 <li>
-                    <a href="././links/movies.html">Favorite Movies</a>
+                    <a href="././links/movies.html">Favorite Movies and Series</a>
                 </li>
                 <li>
-                    <a href=".//links/hobbies.html">My hobbies</a>
+                    <a href="././links/hobbies.html">My hobbies</a>
                 </li>
             </ul>
         </div>
