Target _blank tag added to all external links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             to reality using my programming skills. 
         </p>
         <div>
-            <h2>Click to know my interests!</h2>
+            <h2>Learn more about me!</h2>
             <ul>
                 <li>
                     <a href="././links/books.html">Favorite Books</a>
