--- a/links/hobbies.html
+++ b/links/hobbies.html
@@ -4,15 +4,15 @@
     <h3>Click on each hobby to display more information</h3>
     <ul>
         <li>
-            <a href="https://en.wikipedia.org/wiki/Computer_programming">Practice coding</a>
+            <a href="https://en.wikipedia.org/wiki/Computer_programming" target="_blank">Practice coding</a>
             <img src="../images/Coding.jpg" alt="Computer Screen With Code">
         </li>
         <li>
-            <a href="https://yousician.com/blog/how-to-play-ukulele">Play the ukulele</a>
+            <a href="https://yousician.com/blog/how-to-play-ukulele" target="_blank">Play the ukulele</a>
             <img src="../images/Ukulele.jpg" alt="Guy Playing A Ukulele">
         </li>
         <li>
-            <a href="https://en.wikipedia.org/wiki/Association_football#:~:text=Association%20football%2C%20more%20commonly%20known,rectangular%20field%20called%20a%20pitch.">Practice Soccer</a>
+            <a href="https://en.wikipedia.org/wiki/Association_football#:~:text=Association%20football%2C%20more%20commonly%20known,rectangular%20field%20called%20a%20pitch." target="_blank">Practice Soccer</a>
             <img src="../images/Soccer-Ball.jpg" alt="Soccer Ball On The Grass">
         </li>
     </ul>
