Images sizes updated

--- a/links/hobbies.html
+++ b/links/hobbies.html
@@ -5,15 +5,15 @@
     <ul>
         <li>
             <a href="https://en.wikipedia.org/wiki/Computer_programming" target="_blank">Practice coding</a>
-            <img src="../images/Coding.jpg" alt="Computer Screen With Code">
+            <img src="../images/Coding.jpg" alt="Computer Screen With Code" width="300" height="300">
         </li>
         <li>
             <a href="https://yousician.com/blog/how-to-play-ukulele" target="_blank">Play the ukulele</a>
-            <img src="../images/Ukulele.jpg" alt="Guy Playing A Ukulele">
+            <img src="../images/Ukulele.jpg" alt="Guy Playing A Ukulele" width="300" height="300">
         </li>
         <li>
             <a href="https://en.wikipedia.org/wiki/Association_football#:~:text=Association%20football%2C%20more%20commonly%20known,rectangular%20field%20called%20a%20pitch." target="_blank">Practice Soccer</a>
-            <img src="../images/Soccer-Ball.jpg" alt="Soccer Ball On The Grass">
+            <img src="../images/Soccer-Ball.jpg" alt="Soccer Ball On The Grass" width="300" height="300">
         </li>
     </ul>
 </div>
