--- a/links/movies.html
+++ b/links/movies.html
@@ -5,15 +5,15 @@
     <ul>
         <li>
             <a href="https://en.wikipedia.org/wiki/Breaking_Bad" target="_blank">Breaking Bad</a>
-            <img src="../images/Breaking_Bad_Logo.png" alt="Breaking Bad Logo">
+            <img src="../images/Breaking_Bad_Logo.png" alt="Breaking Bad Logo"width="300" height="300">
         </li>
         <li>
             <a href="https://es.wikipedia.org/wiki/Back_to_the_Future" target="_blank">Back to the Future</a>
-            <img src="../images/Back_to_the_Future_Logo.png" alt="Back To The Future Logo">
+            <img src="../images/Back_to_the_Future_Logo.png" alt="Back To The Future Logo"width="300" height="300">
         </li>
         <li>
             <a href="https://en.wikipedia.org/wiki/Jumanji" target="_blank">Jumanji</a>
-            <img src="../images/Jumanji_Poster.jpg" alt="Jumanji Movie Poster">
+            <img src="../images/Jumanji_Poster.jpg" alt="Jumanji Movie Poster" width="300" height="300">
         </li>
     </ul>
 </div>
