--- a/links/books.html
+++ b/links/books.html
@@ -6,15 +6,15 @@
         
         <li>
             <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone" target="_blank">Harry Potter and the Philosopher's Stone</a>
-            <img src="../images/Harry_Potter_and_the_Philosopher's_Stone_Book_Cover.jpg" alt="Harry Potter and the Philosopher's Stone Book Cover Image">
+            <img src="../images/Harry_Potter_and_the_Philosopher's_Stone_Book_Cover.jpg" alt="Harry Potter and the Philosopher's Stone Book Cover Image" width="300" height="300">
         </li>
         <li>
             <a href="https://en.wikipedia.org/wiki/Hush,_Hush" target="_blank">Hush, Hush</a>
-            <img src="../images/HushHush.jpg" alt="Hush, Hush Book Cover Image">
+            <img src="../images/HushHush.jpg" alt="Hush, Hush Book Cover Image" width="300" height="300">
         </li>
         <li>
             <a href="https://en.wikipedia.org/wiki/Crescendo_(Fitzpatrick_novel)" target="_blank">Crescendo</a>
-            <img src="../images/Crescendo.jpg" alt="Crescendo Book Cover Image">
+            <img src="../images/Crescendo.jpg" alt="Crescendo Book Cover Image" width="300" height="300">
         </li>
     </ul>
 </div>
