--- a/links/movies.html
+++ b/links/movies.html
@@ -4,15 +4,21 @@
     <h3>Click on each movie to display more information</h3>
     <ul>
         <li>
-            <a href="https://en.wikipedia.org/wiki/Breaking_Bad" target="_blank">Breaking Bad</a>
+            <a href="https://en.wikipedia.org/wiki/Breaking_Bad" target="_blank">
+                <h4>Breaking Bad</h4>
+            </a>
             <img src="../images/Breaking_Bad_Logo.png" alt="Breaking Bad Logo"width="220" height="220">
         </li>
         <li>
-            <a href="https://es.wikipedia.org/wiki/Back_to_the_Future" target="_blank">Back to the Future</a>
+            <a href="https://es.wikipedia.org/wiki/Back_to_the_Future" target="_blank">
+                <h4>Back to the Future</h4>
+            </a>
             <img src="../images/Back_to_the_Future_Logo.png" alt="Back To The Future Logo"width="220" height="220">
         </li>
         <li>
-            <a href="https://en.wikipedia.org/wiki/Jumanji" target="_blank">Jumanji</a>
+            <a href="https://en.wikipedia.org/wiki/Jumanji" target="_blank">
+                <h4>Jumanji</h4>
+            </a>
             <img src="../images/Jumanji_Poster.jpg" alt="Jumanji Movie Poster" width="220" height="220">
         </li>
     </ul>
