Code structure cleaned

--- a/links/hobbies.html
+++ b/links/hobbies.html
@@ -1,34 +1,48 @@
-<a href="../index.html">Return to main page</a>
-<div>
-    <h2>These are my favorite hobbies:</h2>
-    <h3>Click on each hobby to display more information</h3>
-    <ul>
-        <li>
-            <a href="https://en.wikipedia.org/wiki/Computer_programming" target="_blank">
-                <h4>Practice coding</h4>
-            </a>
-            <img src="../images/Coding.jpg" 
-            alt="Computer Screen With Code" 
-            width="220" 
-            height="220">
-        </li>
-        <li>
-            <a href="https://yousician.com/blog/how-to-play-ukulele" target="_blank">
-                <h4>Play the ukulele</h4>
-            </a>
-            <img src="../images/Ukulele.jpg" 
-            alt="Guy Playing A Ukulele" 
-            width="220" 
-            height="220">
-        </li>
-        <li>
-            <a href="https://en.wikipedia.org/wiki/Association_football#:~:text=Association%20football%2C%20more%20commonly%20known,rectangular%20field%20called%20a%20pitch." target="_blank">
-                <h4>Practice Soccer</h4>
-            </a>
-            <img src="../images/Soccer-Ball.jpg" 
-            alt="Soccer Ball On The Grass" 
-            width="220" 
-            height="220">
-        </li>
-    </ul>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Favorite Hobbies</title>
+    </head>
+    <body>
+        <a href="../index.html">Return to main page</a>
+        <div>
+            <h2>These are my favorite hobbies:</h2>
+            <h3>Click on each hobby to display more information</h3>
+            <ul>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Computer_programming" target="_blank">
+                        <h4>Practice coding</h4>
+                    </a>
+                    <img src="../images/Coding.jpg" 
+                        alt="Computer Screen With Code" 
+                        width="220" 
+                        height="220"
+                    >
+                </li>
+                <li>
+                    <a href="https://yousician.com/blog/how-to-play-ukulele" target="_blank">
+                        <h4>Play the ukulele</h4>
+                    </a>
+                    <img src="../images/Ukulele.jpg" 
+                        alt="Guy Playing A Ukulele" 
+                        width="220" 
+                        height="220"
+                    >
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Association_football#:~:text=Association%20football%2C%20more%20commonly%20known,rectangular%20field%20called%20a%20pitch." target="_blank">
+                        <h4>Practice Soccer</h4>
+                    </a>
+                    <img src="../images/Soccer-Ball.jpg" 
+                        alt="Soccer Ball On The Grass" 
+                        width="220" 
+                        height="220"
+                    >
+                </li>
+            </ul>
+        </div>
+    </body>
+</html>
