--- a/links/movies.html
+++ b/links/movies.html
@@ -1,34 +1,48 @@
-<a href="../index.html">Return to main page</a>
-<div>
-    <h2>These are my favorite movies and series:</h2>
-    <h3>Click on each movie to display more information</h3>
-    <ul>
-        <li>
-            <a href="https://en.wikipedia.org/wiki/Breaking_Bad" target="_blank">
-                <h4>Breaking Bad</h4>
-            </a>
-            <img src="../images/Breaking_Bad_Logo.png" 
-            alt="Breaking Bad Logo"
-            width="220" 
-            height="220">
-        </li>
-        <li>
-            <a href="https://es.wikipedia.org/wiki/Back_to_the_Future" target="_blank">
-                <h4>Back to the Future</h4>
-            </a>
-            <img src="../images/Back_to_the_Future_Logo.png" 
-            alt="Back To The Future Logo"
-            width="220" 
-            height="220">
-        </li>
-        <li>
-            <a href="https://en.wikipedia.org/wiki/Jumanji" target="_blank">
-                <h4>Jumanji</h4>
-            </a>
-            <img src="../images/Jumanji_Poster.jpg" 
-            alt="Jumanji Movie Poster" 
-            width="220" 
-            height="220">
-        </li>
-    </ul>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Favorite Movies</title>
+    </head>
+    <body>
+        <a href="../index.html">Return to main page</a>
+        <div>
+            <h2>These are my favorite movies and series:</h2>
+            <h3>Click on each movie to display more information</h3>
+            <ul>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Breaking_Bad" target="_blank">
+                        <h4>Breaking Bad</h4>
+                    </a>
+                    <img src="../images/Breaking_Bad_Logo.png" 
+                        alt="Breaking Bad Logo"
+                        width="220" 
+                        height="220"
+                    >
+                </li>
+                <li>
+                    <a href="https://es.wikipedia.org/wiki/Back_to_the_Future" target="_blank">
+                        <h4>Back to the Future</h4>
+                    </a>
+                    <img src="../images/Back_to_the_Future_Logo.png" 
+                        alt="Back To The Future Logo"
+                        width="220" 
+                        height="220"
+                    >
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Jumanji" target="_blank">
+                        <h4>Jumanji</h4>
+                    </a>
+                    <img src="../images/Jumanji_Poster.jpg" 
+                        alt="Jumanji Movie Poster" 
+                        width="220" 
+                        height="220"
+                    >
+                </li>
+            </ul>
+        </div>
+    </body>
+</html>
