--- a/links/books.html
+++ b/links/books.html
@@ -1,35 +1,48 @@
-<a href="../index.html">Return to main page</a>
-<div>
-    <h2>These are my favorite books:</h2>
-    <h3>Click on each book to display more information</h3>
-    <ul>
-        
-        <li>
-            <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone" target="_blank">
-                <h4>Harry Potter and the Philosopher's Stone</h4>
-            </a>
-            <img src="../images/Harry_Potter_and_the_Philosopher's_Stone_Book_Cover.jpg" 
-            alt="Harry Potter and the Philosopher's Stone Book Cover Image" 
-            width="220" 
-            height="220">
-        </li>
-        <li>
-            <a href="https://en.wikipedia.org/wiki/Hush,_Hush" target="_blank">
-                <h4>Hush, Hush</h4>
-            </a>
-            <img src="../images/HushHush.jpg" 
-            alt="Hush, Hush Book Cover Image" 
-            width="220" 
-            height="220">
-        </li>
-        <li>
-            <a href="https://en.wikipedia.org/wiki/Crescendo_(Fitzpatrick_novel)" target="_blank">
-                <h4>Crescendo</h4>
-            </a>
-            <img src="../images/Crescendo.jpg" 
-            alt="Crescendo Book Cover Image" 
-            width="220" 
-            height="220">
-        </li>
-    </ul>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Favorite Books</title>
+    </head>
+    <body>
+        <a href="../index.html">Return to main page</a>
+        <div>
+            <h2>These are my favorite books:</h2>
+            <h3>Click on each book to display more information</h3>
+            <ul>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone" target="_blank">
+                        <h4>Harry Potter and the Philosopher's Stone</h4>
+                    </a>
+                    <img src="../images/Harry_Potter_and_the_Philosopher's_Stone_Book_Cover.jpg" 
+                        alt="Harry Potter and the Philosopher's Stone Book Cover Image" 
+                        width="220" 
+                        height="220"
+                    >
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Hush,_Hush" target="_blank">
+                        <h4>Hush, Hush</h4>
+                    </a>
+                    <img src="../images/HushHush.jpg" 
+                        alt="Hush, Hush Book Cover Image" 
+                        width="220" 
+                        height="220"
+                    >
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Crescendo_(Fitzpatrick_novel)" target="_blank">
+                        <h4>Crescendo</h4>
+                    </a>
+                    <img src="../images/Crescendo.jpg" 
+                        alt="Crescendo Book Cover Image" 
+                        width="220" 
+                        height="220"
+                    >
+                </li>
+            </ul>
+        </div>
+    </body>
+</html>
