Code structure cleaned

--- a/links/movies.html
+++ b/links/movies.html
@@ -16,7 +16,8 @@
                     <a href="https://en.wikipedia.org/wiki/Breaking_Bad" target="_blank">
                         <h4>Breaking Bad</h4>
                     </a>
-                    <img src="../images/Breaking_Bad_Logo.png" 
+                    <img 
+                        src="../images/Breaking_Bad_Logo.png" 
                         alt="Breaking Bad Logo"
                         width="220" 
                         height="220"
@@ -26,7 +27,8 @@
                     <a href="https://es.wikipedia.org/wiki/Back_to_the_Future" target="_blank">
                         <h4>Back to the Future</h4>
                     </a>
-                    <img src="../images/Back_to_the_Future_Logo.png" 
+                    <img 
+                        src="../images/Back_to_the_Future_Logo.png" 
                         alt="Back To The Future Logo"
                         width="220" 
                         height="220"
@@ -36,7 +38,8 @@
                     <a href="https://en.wikipedia.org/wiki/Jumanji" target="_blank">
                         <h4>Jumanji</h4>
                     </a>
-                    <img src="../images/Jumanji_Poster.jpg" 
+                    <img 
+                        src="../images/Jumanji_Poster.jpg" 
                         alt="Jumanji Movie Poster" 
                         width="220" 
                         height="220"
