--- a/links/books.html
+++ b/links/books.html
@@ -16,7 +16,8 @@
                     <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone" target="_blank">
                         <h4>Harry Potter and the Philosopher's Stone</h4>
                     </a>
-                    <img src="../images/Harry_Potter_and_the_Philosopher's_Stone_Book_Cover.jpg" 
+                    <img 
+                        src="../images/Harry_Potter_and_the_Philosopher's_Stone_Book_Cover.jpg" 
                         alt="Harry Potter and the Philosopher's Stone Book Cover Image" 
                         width="220" 
                         height="220"
@@ -26,7 +27,8 @@
                     <a href="https://en.wikipedia.org/wiki/Hush,_Hush" target="_blank">
                         <h4>Hush, Hush</h4>
                     </a>
-                    <img src="../images/HushHush.jpg" 
+                    <img 
+                        src="../images/HushHush.jpg" 
                         alt="Hush, Hush Book Cover Image" 
                         width="220" 
                         height="220"
@@ -36,7 +38,8 @@
                     <a href="https://en.wikipedia.org/wiki/Crescendo_(Fitzpatrick_novel)" target="_blank">
                         <h4>Crescendo</h4>
                     </a>
-                    <img src="../images/Crescendo.jpg" 
+                    <img 
+                        src="../images/Crescendo.jpg" 
                         alt="Crescendo Book Cover Image" 
                         width="220" 
                         height="220"
