--- a/links/hobbies.html
+++ b/links/hobbies.html
@@ -16,7 +16,8 @@
                     <a href="https://en.wikipedia.org/wiki/Computer_programming" target="_blank">
                         <h4>Practice coding</h4>
                     </a>
-                    <img src="../images/Coding.jpg" 
+                    <img 
+                        src="../images/Coding.jpg" 
                         alt="Computer Screen With Code" 
                         width="220" 
                         height="220"
@@ -26,7 +27,8 @@
                     <a href="https://yousician.com/blog/how-to-play-ukulele" target="_blank">
                         <h4>Play the ukulele</h4>
                     </a>
-                    <img src="../images/Ukulele.jpg" 
+                    <img 
+                        src="../images/Ukulele.jpg" 
                         alt="Guy Playing A Ukulele" 
                         width="220" 
                         height="220"
@@ -36,7 +38,8 @@
                     <a href="https://en.wikipedia.org/wiki/Association_football#:~:text=Association%20football%2C%20more%20commonly%20known,rectangular%20field%20called%20a%20pitch." target="_blank">
                         <h4>Practice Soccer</h4>
                     </a>
-                    <img src="../images/Soccer-Ball.jpg" 
+                    <img 
+                        src="../images/Soccer-Ball.jpg" 
                         alt="Soccer Ball On The Grass" 
                         width="220" 
                         height="220"
